--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "vercel-build": "node ./build.js"
+    "build": "[my-framework] build --output public"
   },
   "repository": {
     "type": "git",
